-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
ac57f185d1a2203cd4b585df7bd7af01c3ec33ed (qtdeclarative) 03a0773b1001728ca52d6cd5429e73445274ae81 (qtdeclarative)
When a QObject is exposed to the JavaScript environment with QJSEngine::newQObject and the object was not created by QML (in the implementation no property cache was calculated), then it's not possible to call overloaded slots based on the arguments provided in JavaScript.
- resulted from
-
QTBUG-36765 Various crashes in QJSEngine/JQSValue
-
- Closed
-
| For Gerrit Dashboard: QTBUG-37157 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 79571,1 | Fix calls to overloaded slots for QObjects not created by QML | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 81628,1 | Fix infinite loop in method overload resolution | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |